ciliumGatewayDemo/ciliumGatewayDemo.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hello-namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  namespace: hello-namespace
spec:
  replicas: 10
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: hello-container
          image: nginxdemos/hello:latest
          ports:
            - containerPort: 80
              name: hello-port80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: hello-namespace
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
    - name: hello-80
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hello-gateway
  namespace: hello-namespace
spec:
  gatewayClassName: cilium
  listeners:
    - name: hello-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-route
  namespace: hello-namespace
spec:
  parentRefs:
  - name: hello-gateway
    sectionName: hello-listener
  hostnames:
  - hello.local
  rules:
  - backendRefs:
    - name: hello-service
      port: 80
